--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="text-center">
           <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Pau Cangas, programador junior</h1>
-          <p class="mt-6 text-lg leading-8 text-gray-600">Sòc un noi de 19 anys amb ganes de aprendre i treballar en algun projecte per desenvolupar alguna aplicació</p>
+          <p class="mt-6 text-lg leading-8 text-gray-600">Sóc un noi de 19 anys amb ganes de aprendre i treballar en algun projecte per desenvolupar alguna aplicació</p>
         </div>
       </div>
       <div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]" aria-hidden="true">
@@ -96,68 +96,105 @@
   <div class="bg-white py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl lg:text-center">
-        <h2 class="text-base font-semibold leading-7 text-indigo-600">Deploy faster</h2>
-        <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Everything you need to deploy your app</p>
-        <p class="mt-6 text-lg leading-8 text-gray-600">Quis tellus eget adipiscing convallis sit sit eget aliquet quis. Suspendisse eget egestas a elementum pulvinar et feugiat blandit at. In mi viverra elit nunc.</p>
+        <h2 class="text-base font-semibold leading-7 text-indigo-600">Que m'agradaria estudiar?</h2>
+        <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Els àmbits de la informàtica que m'agradaria aprendre</p>
+        <p class="mt-6 text-lg leading-8 text-gray-600">Ara explicaré que m'agradaria estudiar en un futur</p>
       </div>
       <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-4xl">
         <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-10 lg:max-w-none lg:grid-cols-2 lg:gap-y-16">
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
-              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
-                <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.233-2.33 3 3 0 013.758 3.848A3.752 3.752 0 0118 19.5H6.75z" />
+              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-purple-800">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5c4.125 0 7.5 1.125 7.5 2.5S16.125 9.5 12 9.5 4.5 8.375 4.5 7 7.875 4.5 12 4.5zM12 9.5c4.125 0 7.5 1.125 7.5 2.5s-3.375 2.5-7.5 2.5-7.5-1.125-7.5-2.5S7.875 9.5 12 9.5zM12 14.5c4.125 0 7.5 1.125 7.5 2.5s-3.375 2.5-7.5 2.5-7.5-1.125-7.5-2.5S7.875 14.5 12 14.5z" />
                 </svg>
               </div>
-              Push to deploy
+              Big Data
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Morbi viverra dui mi arcu sed. Tellus semper adipiscing suspendisse semper morbi. Odio urna massa nunc massa.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">El Big Data es refereix a la gestió i anàlisi de grans volums de dades que són massa complexes per ser tractades amb eines tradicionals, amb l'objectiu d'extreure'n informació útil.</dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
-              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
+              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-purple-800">
                 <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
                 </svg>
               </div>
-              SSL certificates
+              Ciberseguretat
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Sit quis amet rutrum tellus ullamcorper ultricies libero dolor eget. Sem sodales gravida quam turpis enim lacus amet.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">La ciberseguretat és la pràctica de protegir sistemes, xarxes i dades d'atacs digitals, garantint la seva confidencialitat, integritat i disponibilitat.</dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
-              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
-                <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
+              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-purple-800">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 2c-5.523 0-10 4.477-10 10 0 1.62.386 3.16 1.081 4.546L1 22l5.454-1.081A9.953 9.953 0 0012 22c5.523 0 10-4.477 10-10s-4.477-10-10-10z" />
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M15 12h-6m6 2h-6" />
                 </svg>
               </div>
-              Simple queues
+              IA
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Quisque est vel vulputate cursus. Risus proin diam nunc commodo. Lobortis auctor congue commodo diam neque.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">La intel·ligència artificial (IA) és la capacitat de les màquines per imitar funcions cognitives humanes com l'aprenentatge, la resolució de problemes i la presa de decisions.</dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
-              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
-                <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33" />
+              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-purple-800">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" viewBox="0 0 100 40" fill="none" aria-hidden="true">
+                  <text x="50%" y="50%" text-anchor="middle" fill="#FFFFFF" font-size="22" font-family="Arial" dominant-baseline="middle">&lt;HTML/&gt;</text>
                 </svg>
               </div>
-              Advanced security
+              Programació
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Arcu egestas dolor vel iaculis in ipsum mauris. Tincidunt mattis aliquet hac quis. Id hac maecenas ac donec pharetra eget.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">La programació és el procés de crear instruccions que una màquina pot executar, escrivint codi en llenguatges de programació per desenvolupar aplicacions, llocs web o sistemes.</dd>
           </div>
         </dl>
       </div>
     </div>
   </div>
+  <!--Text Pre-Carrussel-->
+  <div class="bg-white py-24 sm:py-32">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="mx-auto max-w-2xl lg:mx-0">
+        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Els llenguatges que m'agradaria aprendre</h2>
+        <p class="mt-2 text-lg leading-8 text-gray-600">La llista de els llenguatges de programació que en un futur m'agradaria dominar i fer algún projecte amb ells.</p>
+      </div>
+    </div>
+  </div>
+  <!--Carrussel-->
+  <div class="carousel-container">
+    <div class="carousel">
+      <div class="carousel-item">
+        <img src="LogoC++.png" alt="C++">
+        <p>C++</p>
+      </div>
+      <div class="carousel-item">
+        <img src="LogoCSharp.png" alt="C#">
+        <p>C#</p>
+      </div>
+      <div class="carousel-item">
+        <img src="LogoRuby.png" alt="Ruby">
+        <p>Ruby</p>
+      </div>
+      <div class="carousel-item">
+        <img src="LogoGo.png" alt="Go">
+        <p>Go</p>
+      </div>
+      <div class="carousel-item">
+        <img src="LogoRust.png" alt="Rust">
+        <p>Rust</p>
+      </div>
+    </div>
+    <button class="prev-btn">❮</button>
+    <button class="next-btn">❯</button>
+  </div>
   <!-- Footer -->
-  <footer class="bg-white dark:bg-gray-900">
+  <footer class="bg-purple-500 dark:bg-purple-800">
     <div class="container flex flex-col items-center justify-between p-6 mx-auto space-y-4 sm:space-y-0 sm:flex-row">
       <a href="#">
-        <img class="w-auto h-7" src="https://merakiui.com/images/full-logo.svg" alt="">
+        <img class="w-auto h-20 md:h-32 lg:h-40" src="logoPau.png" alt="">
       </a>
 
-      <p class="text-sm text-gray-600 dark:text-gray-300">© Copyright 2021. All Rights Reserved.</p>
+      <p class="text-sm text-gray-600 dark:text-gray-300">© Copyright 2024. All Rights Reserved.</p>
 
       <div class="flex -mx-2">
         <a href="#" class="mx-2 text-gray-600 transition-colors duration-300 dark:text-gray-300 hover:text-blue-500 dark:hover:text-blue-400" aria-label="Reddit">
