--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>Pàgina de Pau</title>
   </head>
   <body>
+  <div id="loading" class="loading">
+    <img src="loading.gif" alt="Carregant...">
+  </div>
 
   <div class="bg-white">
     <!-- Header -->
@@ -80,7 +83,7 @@
       </div>
       <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
         <div class="hidden sm:mb-8 sm:flex sm:justify-center">
-          <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
+          <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-white ring-1 ring-gray-900/10 hover:ring-gray-900/20">
             Vols veure el que he fet? <a href="https://github.com/paucangas" class="font-semibold text-purple-800"><span class="absolute inset-0" aria-hidden="true"></span>Visita'm <span aria-hidden="true">&rarr;</span></a>
           </div>
         </div>
@@ -88,8 +91,8 @@
           <h1 class="text-2xl font-bold tracking-tight text-white sm:text-5xl gradient-text" style="font-family: 'Playfair Display', serif;">
             Pau Cangas, programador novato
           </h1>
-          <p class="mt-6 text-lg leading-8 text-gray-600">Sóc un noi de 19 anys amb ganes de aprendre i treballar en algun projecte per desenvolupar alguna aplicació</p>
-        </div>
+          <p class="mt-6 text-lg leading-8 text-white">Sóc un noi de 19 anys amb ganes de aprendre i treballar en algun projecte per desenvolupar alguna aplicació</p>
+        </div>F
       </div>
       <div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]" aria-hidden="true">
         <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
@@ -99,7 +102,7 @@
   <div class="bg-white py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl lg:text-center">
-        <h2 class="text-base font-semibold leading-7 text-purple-800">Que m'agradaria estudiar?</h2>
+        <h3 class="text-base font-semibold leading-7 text-purple-800">Que m'agradaria estudiar?</h3>
         <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Els àmbits de la informàtica que m'agradaria aprendre</p>
         <p class="mt-6 text-lg leading-8 text-gray-600">Ara explicaré que m'agradaria estudiar en un futur</p>
       </div>
@@ -112,9 +115,9 @@
                   <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5c4.125 0 7.5 1.125 7.5 2.5S16.125 9.5 12 9.5 4.5 8.375 4.5 7 7.875 4.5 12 4.5zM12 9.5c4.125 0 7.5 1.125 7.5 2.5s-3.375 2.5-7.5 2.5-7.5-1.125-7.5-2.5S7.875 9.5 12 9.5zM12 14.5c4.125 0 7.5 1.125 7.5 2.5s-3.375 2.5-7.5 2.5-7.5-1.125-7.5-2.5S7.875 14.5 12 14.5z" />
                 </svg>
               </div>
-              Big Data
+              <h2>Big Data</h2>
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">El Big Data es refereix a la gestió i anàlisi de grans volums de dades que són massa complexes per ser tractades amb eines tradicionals, amb l'objectiu d'extreure'n informació útil.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600"><h4>El Big Data es refereix a la gestió i anàlisi de grans volums de dades que són massa complexes per ser tractades amb eines tradicionals, amb l'objectiu d'extreure'n informació útil.</h4></dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
@@ -123,9 +126,9 @@
                   <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
                 </svg>
               </div>
-              Ciberseguretat
+              <h2>Ciberseguretat</h2>
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">La ciberseguretat és la pràctica de protegir sistemes, xarxes i dades d'atacs digitals, garantint la seva confidencialitat, integritat i disponibilitat.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600"><h4>La ciberseguretat és la pràctica de protegir sistemes, xarxes i dades d'atacs digitals, garantint la seva confidencialitat, integritat i disponibilitat.</h4></dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
@@ -135,9 +138,9 @@
                   <path stroke-linecap="round" stroke-linejoin="round" d="M15 12h-6m6 2h-6" />
                 </svg>
               </div>
-              IA
+              <h2>IA</h2>
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">La intel·ligència artificial (IA) és la capacitat de les màquines per imitar funcions cognitives humanes com l'aprenentatge, la resolució de problemes i la presa de decisions.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600"><h4>La intel·ligència artificial (IA) és la capacitat de les màquines per imitar funcions cognitives humanes com l'aprenentatge, la resolució de problemes i la presa de decisions.</h4></dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
@@ -146,9 +149,9 @@
                   <text x="50%" y="50%" text-anchor="middle" fill="#FFFFFF" font-size="22" font-family="Arial" dominant-baseline="middle">&lt;HTML/&gt;</text>
                 </svg>
               </div>
-              Programació
+              <h2>Programació</h2>
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">La programació és el procés de crear instruccions que una màquina pot executar, escrivint codi en llenguatges de programació per desenvolupar aplicacions, llocs web o sistemes.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600"><h4>La programació és el procés de crear instruccions que una màquina pot executar, escrivint codi en llenguatges de programació per desenvolupar aplicacions, llocs web o sistemes.</h4></dd>
           </div>
         </dl>
       </div>
@@ -166,30 +169,36 @@
   <!--Carrussel-->
   <div class="carousel-container">
     <div class="carousel">
+
       <div class="carousel-item">
-        <img src="LogoC++.png" alt="C++">
-        <p>C++</p>
+        <img src="LogoCSharp.png" alt="Imagen 3"> <!-- Duplicado de la última imagen -->
+      </div>
+
+      <div class="carousel-item active">
+        <img src="LogoRust.png" alt="Imagen 3"> <!-- Duplicado de la última imagen Cambiar las imagenes-->
       </div>
       <div class="carousel-item">
-        <img src="LogoCSharp.png" alt="C#">
-        <p>C#</p>
+        <img src="LogoGo.png" alt="Imagen 1">
       </div>
       <div class="carousel-item">
-        <img src="LogoRuby.png" alt="Ruby">
-        <p>Ruby</p>
+        <img src="LogoRuby.png" alt="Imagen 2">
       </div>
       <div class="carousel-item">
-        <img src="LogoGo.png" alt="Go">
-        <p>Go</p>
+        <img src="LogoC++.png" alt="Imagen 3"> <!-- Duplicado de la última imagen -->
       </div>
       <div class="carousel-item">
-        <img src="LogoRust.png" alt="Rust">
-        <p>Rust</p>
+        <img src="LogoCSharp.png" alt="Imagen 3"> <!-- Duplicado de la última imagen -->
       </div>
+
+      <div class="carousel-item active">
+        <img src="LogoRust.png" alt="Imagen 3"> <!-- Duplicado de la última imagen Cambiar las imagenes-->
+      </div>
+
     </div>
     <button class="prev-btn">❮</button>
     <button class="next-btn">❯</button>
   </div>
+
   <!-- Footer -->
   <footer class="bg-purple-500 dark:bg-purple-800">
     <div class="container flex flex-col items-center justify-between p-6 mx-auto space-y-4 sm:space-y-0 sm:flex-row">
